# realign-templates-no-pipeline

./: .env  .gitignore  README.md  pyproject.toml
format-gen-prompts/: fewshot.txt
prompts/: default.txt  zeroshot.txt
src/: logger.py  secknowledge2_partial.py  ui.py
tasks/: APTFlan_aptnotes_chat_compare.json  APTFlan_aptnotes_chat_expression.json  APTFlan_natural_questions.json  BronFlan_bron_2_step_mitigation_detection_CoT.json  BronFlan_bron_direct_dm_multiple_choice.json  BronFlan_bron_direct_dm_open.json  BronFlan_bron_direct_dm_yes_no.json  BronFlan_bron_direct_explanations_a_b_classification.json  BronFlan_bron_direct_multiple_choice.json  BronFlan_bron_direct_open.json  BronFlan_bron_direct_yes_no.json  CAPECFlan_capec_description.json  CAPECFlan_capec_example_instances.json  CAPECFlan_capec_execution_flow.json  CAPECFlan_capec_indicators.json  CAPECFlan_capec_mitigations.json  CAPECFlan_capec_prerequirements.json  CAPECFlan_capec_related_cwes.json  CAPECFlan_capec_relationships.json  CAPECFlan_capec_resources_required.json  CAPECFlan_capec_skills_required.json  CAPECFlan_capec_summarization_of_description.json  CAPECFlan_capec_taxonomy_mapping.json  CAPECFlan_reverse_capec_taxonomy_mapping.json  CISSFlan_natural_questions.json  CISSFlan_retrieval1_multiple_choice.json  CISSFlan_t0_multiple_choice_separated_options.json  CVEBasic_cve_description.json  CWE_Flan_cwe_background.json  CWE_Flan_cwe_common_consequences.json  CWE_Flan_cwe_define.json  CWE_Flan_cwe_description_summarization.json  CWE_Flan_cwe_detection_methods.json  CWE_Flan_cwe_mitigate.json  (+77 more)
(+113 files in other folders)
