[project]
name = "secknowledge2_format_generation_ui"
version = "0.1.0"
description = "Simple UI to help generate formats for any seed dataset before feeding it to SecKnowledge 2."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.34.0",
    "pandas<2.3.0",
    "python-dotenv>=1.1.0",
    "openai>=1.88.0",
    "ddgs>=9.6.0",
    "docling>=2.7.0",
]
